- Only show role after clicking a button - Fix list players ui overlapping top information - Remove some divs

--- a/Client/static/style.css
+++ b/Client/static/style.css
@@ -90,6 +90,10 @@ body.gameHostBg{
     padding: 20px;
 }
 
+.list-players{
+    margin-top: 65px;
+}
+
 .missions{
     display: inline-block;
     margin:0 auto;
